[gd_scene load_steps=8 format=3 uid="uid://bnc37s2vpdjex"]

[ext_resource type="PackedScene" uid="uid://chp3bd6blfvcj" path="res://scenes/interface/casino_minigames/casino_window.tscn" id="1_at3fp"]
[ext_resource type="Script" uid="uid://doak8o3tf5vfc" path="res://scripts/russian_roulette_window.gd" id="2_at3fp"]
[ext_resource type="Texture2D" uid="uid://flq7ab6bhtyy" path="res://resources/images/casino/rug_seamless_texture_contrast_dark.png" id="3_3cref"]
[ext_resource type="PackedScene" uid="uid://cvlbqvv2c0ve" path="res://scenes/casino/revolver_russian_roulette.tscn" id="5_at3fp"]

[sub_resource type="Shader" id="Shader_qgsof"]
resource_local_to_scene = true
code = "shader_type canvas_item;

/* ================= SCROLL SETTINGS ================= */

uniform float scroll_speed : hint_range(0, 2) = 0.08;
uniform float angle_degrees : hint_range(0, 360) = 45.0;
uniform float repeat_x : hint_range(0.1, 20) = 1.2;
uniform float repeat_y : hint_range(0.1, 20) = 1.2;
uniform sampler2D texture_to_scroll;

/* ================= GLITCH SETTINGS ================= */

uniform float glitch_chance : hint_range(0.0, 1.0) = 0.02;
uniform float glitch_speed = 7.0;
uniform float slice_density = 14.0;
uniform float slice_strength = 0.38;
uniform float shake_strength = 0.02;
uniform float chroma_offset = 0.016;
uniform float noise_strength = 0.2;
uniform float color_flash_strength = 0.4;
uniform float scanline_strength = 0.18;
uniform float local_warp_strength = 0.14;
uniform float flip_chance : hint_range(0.0,1.0) = 0.05;

/* ================= RANDOM ================= */

float rand(float x) { 
	return fract(sin(x * 143758.5453) * 43758.5453); 
}

float rand2(vec2 p) { 
	return fract(sin(dot(p, vec2(127.1,311.7))) * 43758.5453); 
}

/* ================= FRAGMENT ================= */

void fragment() {

	/* ---------- TEXTURE SCROLL ---------- */

	float angle_rad = radians(angle_degrees);
	vec2 direction = vec2(cos(angle_rad), sin(angle_rad));

	vec2 uv = UV - (TIME * scroll_speed * direction);

	float row = fract(floor(uv.y * repeat_y) * 0.5);

	vec2 scaled_uv = vec2(
		fract(uv.x * repeat_x),
		fract(uv.y * repeat_y)
	);

	vec2 texel_size = vec2(1.0) / vec2(textureSize(texture_to_scroll, 0));
	vec2 snapped_uv = round(scaled_uv / texel_size) * texel_size;

	/* ---------- GLITCH TRIGGER ---------- */

	float glitch = step(1.0 - glitch_chance, rand(floor(TIME * glitch_speed)));

	/* ---------- SLICE EFFECT ---------- */

	float slice_id = floor(snapped_uv.y * slice_density + rand(floor(TIME)));
	float slice_rand = rand(slice_id + floor(TIME * glitch_speed));
	float slice_mask = step(0.5, slice_rand) * glitch;

	if (rand(slice_id * TIME) < flip_chance) {
		snapped_uv.x = 1.0 - snapped_uv.x;
	}

	snapped_uv.x += (slice_rand - 0.5) * slice_strength * slice_mask;

	/* ---------- MICRO JITTER ---------- */

	float jitter = step(0.85, rand(TIME * 12.0)) * glitch;
	snapped_uv.x += (rand(TIME * 3.0) - 0.5) * 0.08 * jitter;

	/* ---------- LOCAL WARP ---------- */

	float warp_zone = step(0.65, rand2(vec2(slice_id, TIME)));
	snapped_uv +=
		(vec2(rand2(snapped_uv + TIME), rand2(snapped_uv - TIME)) - 0.5)
		* local_warp_strength * warp_zone * glitch;

	/* ---------- GLOBAL SHAKE ---------- */

	snapped_uv += vec2(
		rand(TIME * 1.3) - 0.5,
		rand(TIME * 1.7) - 0.5
	) * shake_strength * glitch;

	/* ---------- BASE SAMPLE ---------- */

	vec4 base = texture(texture_to_scroll, snapped_uv);

	/* ---------- CHROMATIC SPLIT ---------- */

	float r = texture(texture_to_scroll, snapped_uv + vec2(chroma_offset * glitch, 0.0)).r;
	float b = texture(texture_to_scroll, snapped_uv - vec2(chroma_offset * glitch, 0.0)).b;
	vec3 color = vec3(r, base.g, b);

	/* ---------- DIGITAL NOISE ---------- */

	color += (rand2(snapped_uv * TIME * 1.5) - 0.5) * noise_strength * glitch;

	/* ---------- SCANLINE DROP ---------- */

	float scan = step(0.9, rand(snapped_uv.y * 100.0 + TIME * 10.0));
	color *= 1.0 - scan * scanline_strength * glitch;

	/* ---------- COLOR FLASH ---------- */

	vec3 flash_color = vec3(
		step(0.5, rand(TIME + 0.1)),
		step(0.5, rand(TIME + 3.1)),
		step(0.5, rand(TIME + 6.1))
	);

	color = mix(
		color,
		flash_color,
		rand(TIME * 4.0) * color_flash_strength * glitch
	);
	
	vec2 p = FRAGCOORD.xy - SCREEN_UV.xy / SCREEN_PIXEL_SIZE;

	COLOR = vec4(color, base.a);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cx0bv"]
resource_local_to_scene = true
shader = SubResource("Shader_qgsof")
shader_parameter/scroll_speed = 0.08
shader_parameter/angle_degrees = 45.0
shader_parameter/repeat_x = 1.2
shader_parameter/repeat_y = 1.2
shader_parameter/texture_to_scroll = ExtResource("3_3cref")
shader_parameter/glitch_chance = 0.02
shader_parameter/glitch_speed = 7.0
shader_parameter/slice_density = 14.0
shader_parameter/slice_strength = 0.38
shader_parameter/shake_strength = 0.02
shader_parameter/chroma_offset = 0.016
shader_parameter/noise_strength = 0.2
shader_parameter/color_flash_strength = 0.4
shader_parameter/scanline_strength = 0.18
shader_parameter/local_warp_strength = 0.14
shader_parameter/flip_chance = 0.05

[sub_resource type="Environment" id="Environment_i6v1n"]
background_mode = 2
background_color = Color(0.57, 0, 0.1615, 0)
ambient_light_source = 3
ambient_light_color = Color(0.4, 0.4, 0.4, 1)

[node name="RussianRouletteWindow" instance=ExtResource("1_at3fp")]
anchor_right = 0.310937
anchor_bottom = 0.494444
script = ExtResource("2_at3fp")
can_close_window = false

[node name="Background" parent="Panel" index="0"]
material = SubResource("ShaderMaterial_cx0bv")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Contents" index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Contents/SubViewportContainer" index="0"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
anisotropic_filtering_level = 0
gui_disable_input = true
gui_embed_subwindows = true
size = Vector2i(596, 533)
render_target_update_mode = 4

[node name="RevolverWorld" type="Node3D" parent="Contents/SubViewportContainer/SubViewport" index="0"]

[node name="Camera3D" type="Camera3D" parent="Contents/SubViewportContainer/SubViewport/RevolverWorld" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.885, -1.726)
environment = SubResource("Environment_i6v1n")
current = true

[node name="RevolverRussianRoulette" parent="Contents/SubViewportContainer/SubViewport/RevolverWorld" index="1" instance=ExtResource("5_at3fp")]
transform = Transform3D(0.075, 0, 0, 0, -3.27835e-09, 0.075, 0, -0.075, -3.27835e-09, 0, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Contents/SubViewportContainer/SubViewport/RevolverWorld" index="2"]
transform = Transform3D(1, 0, 0, 0, -0.965926, 0.258819, 0, -0.258819, -0.965926, 0, 0, 0)
directional_shadow_mode = 0

[connection signal="window_opened" from="." to="." method="_on_window_opened"]
[connection signal="revolver_shot" from="Contents/SubViewportContainer/SubViewport/RevolverWorld/RevolverRussianRoulette" to="." method="_on_revolver_russian_roulette_revolver_shot"]
